k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-notice
  labels:
    name: test-notice
