k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-notice-app
  name: test-notice-deployment
  namespace: test-notice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-notice-app
  template:
    metadata:
      labels:
        app: test-notice-app

    spec:
      containers:
        - name: test-notice-container
          image: 192.168.100.123:5000/test-notice-app:v2.3.0-rc1
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
