k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test-notice-app
  name: test-notice-app
  namespace: test-notice
spec:
  ports:
    - name: "whoami"
      port: 18080
      protocol: TCP
      targetPort: 80
  selector:
    app: test-notice-app
  type: ClusterIP
